--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-*/__pycache__
+__pycache__/
+*.py[cod]
+*$py.class
+
+
+# Distribution / packaging
+develop-eggs/
+dist/
+eggs/
+.eggs/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+.ipynb_checkpoints
+
+.env
+.venv
+
